--- a/res/styles.css
+++ b/res/styles.css
@@ -165,7 +165,7 @@ section {
 
 .bg-image {
   /* photo from: https://www.pexels.com/photo/dawn-landscape-mountains-nature-1852/ */
-  background-image: url(/res/background.jpg);
+  background-image: url(/res/fiori.jpg);
   background-attachment: scroll;
   background-position: 50% 50%;
   background-size: cover;
